--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.0.12",
     "@clerk/nextjs": "^5.0.5",
     "@hello-pangea/dnd": "^16.6.0",
     "@prisma/client": "^5.14.0",
